# underwood

./: .gitignore  .typos.toml  AGENTS.md  AUTHORS  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLANS.md  README.md  UNDERWOOD_HANDOVER.md  taplo.toml
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  audit-remote.sh  copyright.sh
.github/workflows/: ci.yml  governance.yml
benches/: README.md
benches/flow/: Cargo.toml  README.md
benches/flow/src/: report.rs
benches/parley-seam/: Cargo.toml  README.md
benches/position/: Cargo.toml  README.md
benches/position/src/: candidate.rs  main.rs  model.rs  report.rs  trace.rs  tree.rs
benches/semantic-scene/: Cargo.toml  README.md
benches/semantic-scene/src/: main.rs
benches/text-data/: Cargo.toml  README.md  inspect.mjs  measure.sh
docs/: CONSTITUTION.md
docs/adr/: 0000-template.md  0001-position-and-canonical-storage.md  0002-resumable-flow-and-virtual-extents.md  0003-text-data-provisioning.md  0004-parley-boundary-and-contingency.md  README.md
docs/charter/: 000-spearhead-proof-stewardship.md
docs/design/: 0001-first-semantic-to-scene-slice.md  0002-first-public-api-gate.md  0003-computed-inline-style-spine.md  0004-fontique-backed-font-requests.md  0005-retained-parley-shaped-text.md  0006-parley-backed-paragraph-formation.md  0007-ink-accurate-glyph-coverage.md  0008-live-semantic-document-showcase.md  0009-interactive-snapshot-editing.md  0010-renderer-owned-glyph-paint-extent.md  0011-source-complete-grapheme-interaction.md
docs/governance/: README.md  crates.tsv
docs/handoffs/: 2026-07-21-bootstrap.md
docs/proof/: README.md  exact-interaction-review-2026-07-22.md  flow-wind-tunnel-2026-07-21.md  fontique-font-request-review-2026-07-22.md  ime-composition-review-2026-07-22.md  ink-coverage-review-2026-07-22.md  ledger.tsv  live-showcase-review-2026-07-22.md  native-editor-review-2026-07-22.md  parley-breaking-seam-audit-2026-07-22.md  parley-formation-benchmark-2026-07-22.md  parley-formation-review-2026-07-22.md  parley-seam-wind-tunnel-2026-07-21.md  position-wind-tunnel-2026-07-21.md  renderer-owned-glyph-paint-review-2026-07-22.md  retained-shaped-text-benchmark-2026-07-22.md  retained-shaped-text-review-2026-07-22.md  selection-transaction-review-2026-07-22.md  semantic-activation-review-2026-07-23.md  semantic-scene-benchmark-2026-07-21.md  semantic-scene-benchmark-2026-07-22.md  semantic-scene-review-2026-07-21.md  source-complete-grapheme-interaction-review-2026-07-24.md  text-data-wind-tunnel-2026-07-21.md  visual-proof-review-2026-07-21.md
examples/headless/: Cargo.toml  README.md
examples/headless/src/: main.rs
examples/showcase/: Cargo.toml  README.md
examples/showcase/src/: app.rs  content.rs  host.rs  interaction.rs  main.rs  presentation.rs
examples/visual-proof/: Cargo.toml  README.md
examples/visual-proof/src/: main.rs
experiments/: README.md
experiments/flow/: Cargo.toml  README.md
experiments/flow/src/: extent.rs  flow.rs  main.rs
experiments/ime-compat/: Cargo.toml  README.md
experiments/ime-compat/src/: main.rs
experiments/parley-seam/: Cargo.toml  README.md
experiments/parley-seam/src/: main.rs
experiments/position/: Cargo.toml  README.md
experiments/position/src/: candidate.rs  form.rs  main.rs  model.rs  report.rs  trace.rs
experiments/text-data/: Cargo.toml  README.md  measure.sh
experiments/text-data/src/: main.rs
underwood/: Cargo.toml  README.md
underwood/src/: adapter.rs  composition.rs  document.rs  editable.rs  error.rs  lib.rs  scene.rs  selection.rs  style.rs
underwood_parley/: Cargo.toml  README.md
underwood_parley/src/: lib.rs
xtask/: Cargo.toml  README.md
xtask/src/: beads.rs  main.rs  proof.rs  repository.rs  table.rs
