[workspace]
members = [
  "benches/flow",
  "benches/parley-seam",
  "benches/position",
  "benches/text-data",
  "examples/headless",
  "underwood",
  "underwood_parley",
  "xtask",
]
default-members = ["xtask"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
# Keep synchronized with RUST_MIN_VER in .github/workflows/ci.yml and the
# support statement in README.md.
rust-version = "1.92"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/forest-rs/underwood"

[workspace.dependencies]
fontique = { git = "https://github.com/linebender/parley.git", rev = "45da4a90248b1600277a4294b70d8bfde5ca8e97", default-features = false, features = [
  "libm",
] }
kurbo = { version = "0.13.1", default-features = false, features = ["libm"] }
parlance = { git = "https://github.com/linebender/parley.git", rev = "45da4a90248b1600277a4294b70d8bfde5ca8e97", default-features = false }
parley_core = { git = "https://github.com/linebender/parley.git", rev = "45da4a90248b1600277a4294b70d8bfde5ca8e97", default-features = false, features = [
  "libm",
] }
peniko = { version = "0.6.1", default-features = false, features = ["libm"] }
underwood = { path = "underwood" }
underwood_parley = { path = "underwood_parley" }

[workspace.lints]
# LINEBENDER LINT SET - Cargo.toml - v8
# See https://linebender.org/wiki/canonical-lints/.
rust.keyword_idents_2024 = "forbid"
rust.non_ascii_idents = "forbid"
rust.non_local_definitions = "forbid"
rust.unsafe_op_in_unsafe_fn = "forbid"

rust.elided_lifetimes_in_paths = "warn"
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.trivial_numeric_casts = "warn"
rust.unnameable_types = "warn"
rust.unreachable_pub = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_macro_rules = "warn"
rust.unused_qualifications = "warn"

rust.unsafe_code = "deny"

clippy.too_many_arguments = "allow"

clippy.allow_attributes = "warn"
clippy.allow_attributes_without_reason = "warn"
clippy.cast_possible_truncation = "warn"
clippy.cast_possible_wrap = "warn"
clippy.collection_is_never_read = "warn"
clippy.dbg_macro = "warn"
clippy.debug_assert_with_mut_call = "warn"
clippy.default_trait_access = "warn"
clippy.doc_markdown = "warn"
clippy.fn_to_numeric_cast_any = "warn"
clippy.infinite_loop = "warn"
clippy.large_stack_arrays = "warn"
clippy.mismatching_type_param_order = "warn"
clippy.missing_assert_message = "warn"
clippy.missing_fields_in_debug = "warn"
clippy.same_functions_in_if_condition = "warn"
clippy.semicolon_if_nothing_returned = "warn"
clippy.should_panic_without_expect = "warn"
clippy.todo = "warn"
clippy.unseparated_literal_suffix = "warn"
clippy.use_self = "warn"

clippy.cargo_common_metadata = "warn"
clippy.negative_feature_names = "warn"
clippy.redundant_feature_names = "warn"
clippy.wildcard_dependencies = "warn"
# END LINEBENDER LINT SET

[profile.ci]
inherits = "dev"
debug = 0
strip = "debuginfo"

[profile.ci.package."*"]
debug-assertions = true

[profile.wind-tunnel]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"
