[package]
name = "underwood_ime_compat_experiment"
version.workspace = true
authors = ["Underwood Contributors"]
edition.workspace = true
rust-version.workspace = true
description = "Deterministic feed-driven and host-driven IME compatibility proof for Underwood"
homepage = "https://github.com/forest-rs/underwood"
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
underwood.workspace = true
underwood_parley.workspace = true

[lints]
workspace = true
