[package]
name = "underwood_parley_seam_experiment"
version.workspace = true
authors = ["Underwood Contributors"]
edition.workspace = true
rust-version.workspace = true
description = "Historical retained-Parley seam experiment for Underwood"
homepage = "https://github.com/forest-rs/underwood"
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
fontique = { git = "https://github.com/waywardmonkeys/parley.git", rev = "181664b28144cb59671a7f1b736757c6ebe270f2", default-features = false, features = [
  "std",
] }
parlance = { git = "https://github.com/waywardmonkeys/parley.git", rev = "181664b28144cb59671a7f1b736757c6ebe270f2", default-features = false, features = [
  "std",
] }
parley = { git = "https://github.com/waywardmonkeys/parley.git", rev = "181664b28144cb59671a7f1b736757c6ebe270f2", default-features = false, features = [
  "std",
] }
parley_core = { git = "https://github.com/waywardmonkeys/parley.git", rev = "181664b28144cb59671a7f1b736757c6ebe270f2", default-features = false, features = [
  "std",
] }
parley_dev = { git = "https://github.com/waywardmonkeys/parley.git", rev = "181664b28144cb59671a7f1b736757c6ebe270f2" }

[lints]
workspace = true
