[package]
name = "underwood_parley_seam_experiment"
version.workspace = true
authors = ["Underwood Contributors"]
edition.workspace = true
rust-version.workspace = true
description = "Historical retained-Parley seam experiment for Underwood"
homepage = "https://github.com/forest-rs/underwood"
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
fontique = { git = "https://github.com/waywardmonkeys/parley.git", rev = "d12c801d8fd298ff095f1ec903b6adaa732fcef2", default-features = false, features = [
  "std",
] }
parlance = { git = "https://github.com/waywardmonkeys/parley.git", rev = "d12c801d8fd298ff095f1ec903b6adaa732fcef2", default-features = false, features = [
  "std",
] }
parley = { git = "https://github.com/waywardmonkeys/parley.git", rev = "d12c801d8fd298ff095f1ec903b6adaa732fcef2", default-features = false, features = [
  "std",
] }
parley_core = { git = "https://github.com/waywardmonkeys/parley.git", rev = "d12c801d8fd298ff095f1ec903b6adaa732fcef2", default-features = false, features = [
  "std",
] }
parley_dev = { git = "https://github.com/waywardmonkeys/parley.git", rev = "d12c801d8fd298ff095f1ec903b6adaa732fcef2" }

[lints]
workspace = true
