[package]
name = "underwood_text_data_experiment"
version.workspace = true
authors = ["Underwood Contributors"]
edition.workspace = true
rust-version.workspace = true
description = "Private text-data distribution experiment for Underwood"
homepage = "https://github.com/forest-rs/underwood"
repository.workspace = true
license.workspace = true
publish = false
default-run = "underwood_text_data_experiment"

[features]
complex-scripts = ["parley_core/complex-scripts"]
default = []

[dependencies]
parley_core = { git = "https://github.com/waywardmonkeys/parley.git", rev = "181664b28144cb59671a7f1b736757c6ebe270f2", default-features = false, features = [
  "std",
] }

[lints]
workspace = true
