[package]
name = "underwood_text_data_experiment"
version.workspace = true
authors = ["Underwood Contributors"]
edition.workspace = true
rust-version.workspace = true
description = "Private text-data distribution experiment for Underwood"
homepage = "https://github.com/forest-rs/underwood"
repository.workspace = true
license.workspace = true
publish = false
default-run = "underwood_text_data_experiment"

[features]
complex-scripts = ["parley_core/complex-scripts"]
default = []

[dependencies]
parley_core = { git = "https://github.com/waywardmonkeys/parley.git", rev = "d12c801d8fd298ff095f1ec903b6adaa732fcef2", default-features = false, features = [
  "std",
] }

[lints]
workspace = true
