[package]
name = "underwood_text_data_experiment"
version.workspace = true
authors = ["Underwood Contributors"]
edition.workspace = true
rust-version.workspace = true
description = "Private text-data distribution experiment for Underwood"
homepage = "https://github.com/forest-rs/underwood"
repository.workspace = true
license.workspace = true
publish = false
default-run = "underwood_text_data_experiment"

[features]
complex-scripts = ["parley_core/complex-scripts"]
default = []

[dependencies]
parley_core = { git = "https://github.com/waywardmonkeys/parley.git", rev = "44d155e17a6dbf455c8b9133c2ae40955c9f2af2", default-features = false, features = [
  "std",
] }

[lints]
workspace = true
